--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>모각코 모두 보기</title>
@@ -7,6 +7,50 @@
 <body>
 
 <h1> 모각코 모두 찾아보기 </h1>
+
+<div class="meetings"></div>
+
+<script th:inline="javascript">
+
+    window.onload = () => {
+
+        const meetingsDiv = document.querySelector(".meetings")
+
+        fetch('/api/meeting')
+            .then(response => response.json())
+            .then(meetings => {
+                // 응답 데이터를 처리하는 코드 작성
+                meetings.forEach(meeting => {
+                    const body = `
+                        ${makeBody("모임 이름", meeting.name)}
+                        ${makeBody("위치", meeting.primaryAddress, meeting.detailAddress)}
+                        ${makeBody("날짜", meeting.startAt, "~", meeting.endAt)}
+                     `
+
+                    meetingsDiv.innerHTML += `<div style="margin: 10px 0px 10px 10px" name="meeting" value="${meeting.meetingId}"> ${body} </div>`
+                })
+
+                const meetingElements = document.querySelectorAll('div[name="meeting"]');
+
+                meetingElements
+                    .forEach(element => element.addEventListener(
+                        "click",
+                        () => {
+                            const meetingId = element.getAttribute("value")
+                            location.href = `/meeting-detail/${meetingId}`
+                        })
+                    )
+            })
+            .catch(error => {
+                console.error(error)
+                alert(error)
+            });
+
+        // Function
+        const makeBody = (text, ...data) => `<div> ${text} : ${data.join(" ")} </div>`
+    }
+
+</script>
 
 </body>
 </html>
