--- a/moinda-api/src/main/resources/templates/main.html
+++ b/moinda-api/src/main/resources/templates/main.html
@@ -113,11 +113,10 @@
     window.onload = function() {
         const session = [[${session.session}]]
 
-        // TODO : 임시 주석 선언
-        // if(!session) {
-        //     alert("세션이 만료되어 다시 로그인을 해주세요.")
-        //     location.href = "/login"
-        // }
+        if(!session) {
+            alert("세션이 만료되어 다시 로그인을 해주세요.")
+            location.href = "/login"
+        }
     }
 
 </script>
