--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -18,10 +18,10 @@
 
         const session = [[${session.session}]]
 
-        // if(!session) {
-        //     alert("세션이 만료되어 다시 로그인을 해주세요.")
-        //     location.href = "/login"
-        // }
+        if(!session) {
+            alert("세션이 만료되어 다시 로그인을 해주세요.")
+            location.href = "/login"
+        }
 
         const meetingDetailDiv = document.querySelector(".meeting")
 
