[#50] feat: Add 'to Search In Participating Meetings' API & html

--- a/moinda-api/src/main/resources/templates/meeting/myMeetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/myMeetings.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org" lang="ko">
 <head>
     <meta charset="UTF-8">
     <title>내 모각코</title>
@@ -7,6 +7,111 @@
 <body>
 
 <h1> 내가 참여한 모각코들 보여줘라 </h1>
+
+<div class="inParticipatingMeetings"></div>
+
+<script th:inline="javascript">
+
+    window.onload = () => {
+        var httpRequest = getHttpInstance();
+
+        const meetingsDiv = document.querySelector(".inParticipatingMeetings")
+
+        fetch('/api/meeting/in-participating')
+            .then(response => response.json())
+            .then(meetings => {
+
+                meetings.forEach(meeting => {
+                    const body = `
+                        <div style="margin: 10px 0px 10px 10px" name="meeting">
+                            <div name="meetingInfo" value="${meeting.meetingId}">
+                                ${makeBody("모임 이름", meeting.name)}
+                                ${makeBody("위치", meeting.primaryAddress, meeting.detailAddress)}
+                                ${makeBody("날짜", meeting.startAt, "~", meeting.endAt)}
+                            </div>
+                            <button type="button" name='leave'> 참여취소 </button>
+                        </div>
+                     `
+
+                    meetingsDiv.innerHTML += body
+                })
+
+                const participateButton = document.querySelectorAll('button[name="leave"]');
+
+                participateButton.forEach( button => {
+                    const meetingId = button.closest('div[name="meeting"]')
+                        .querySelector('div[name="meetingInfo"]')
+                        .getAttribute(`value`)
+
+                    button.addEventListener("click", () => leave(meetingId))
+                })
+
+                const meetingElements = document.querySelectorAll('div[name="meetingInfo"]');
+
+                meetingElements
+                    .forEach(element => element.addEventListener(
+                        "click",
+                        () => {
+                            const meetingId = element.getAttribute("value")
+                            location.href = `/meeting-detail/${meetingId}`
+                        })
+                    )
+            })
+            .catch(error => {
+                console.error(error)
+                alert(error)
+            });
+
+        // Function
+        const makeBody = (text, ...data) => `<div> ${text} : ${data.join(" ")} </div>`
+
+        // TODO : 한명당 하나의 모임에만 들어가기 떄문에, 본인 아이디만으로 충분하게 할 수는 있다.
+        // TODO : 하지만 이후에 meetingId 가 필요해 질 것이므로 meeting를 보내기만 한다.
+        const leave = meetingId => {
+            const leaveRequestDto = {
+                "meetingId" : meetingId,
+                "memberId": 1,
+            }
+
+            callRestApi(() => leaveEvent(meetingId), "POST", "/api/meeting/leave", leaveRequestDto)
+        }
+
+        function getHttpInstance() {
+            if(!httpRequest) {
+                httpRequest = new XMLHttpRequest();
+            }
+
+            return httpRequest;
+        }
+
+        function callRestApi(e, type, url, data) {
+            const jsonParsedData = data ? JSON.stringify(data) : null;
+
+            httpRequest.onreadystatechange = e;
+            httpRequest.open(type, url);
+            httpRequest.setRequestHeader("Content-Type", "application/json")
+            httpRequest.send(jsonParsedData);
+        }
+
+        function leaveEvent(meetingId) {
+            try {
+                if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                    if (httpRequest.status === 200) {
+                        alert("모임 참여를 취소했습니다.")
+                        window.location.href = `/myMeetings`
+                    } else {
+                        alert("모임 참여 취소를 실패했습니다.");
+                        return;
+                    }
+                }
+            }
+            catch( e ) {
+                alert(`요청에 실패했습니다. 서버에 문의해주세요.`);
+            }
+        }
+    }
+
+</script>
 
 </body>
 </html>
