[#52] fix: mod Meeting Location Object Collection's Property Naming

--- a/moinda-api/src/main/resources/templates/maps.html
+++ b/moinda-api/src/main/resources/templates/maps.html
@@ -128,6 +128,7 @@
 
             fragment.appendChild(itemEl);
 // TODO :  모달로 띄우고 그 안에서 검색하고 나온 데어터를 눌렀을때 화면에 입력시키게 하자.
+            // TODO : 원하는 동작이 안나오는중 가장 마지막 데이터의 값을 가져오고 있음,
             var info = itemEl.querySelector(".info")
             var placeName = info.querySelector("h5[name='placeName']")
             var primaryAddress = info.querySelector("span[name='primaryAddress']")
