--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -28,8 +28,6 @@
         var parts = window.location.pathname.split('/');
         var meetingId = parts[parts.length - 1];
 
-        console.log("meetingId : ", meetingId)
-
         // REST API 호출 및 응답 처리
         fetch(`/api/meeting/${meetingId}`)
             .then(response => response.json())
@@ -37,7 +35,8 @@
                 // 응답 데이터를 처리하는 코드 작성
                 const body = `
                     ${makeBody("모임 이름", meeting.name)}
-                    ${makeBody("위치", meeting.primaryAddress, meeting.detailAddress)}
+                    ${makeBody("주소", meeting.primaryAddress)}
+                    ${makeBody("장소명",  meeting.placeName)}
                     ${makeBody("날짜", meeting.startAt, "~", meeting.endAt)}
                  `
 
