--- a/moinda-api/src/main/resources/templates/maps.html
+++ b/moinda-api/src/main/resources/templates/maps.html
@@ -40,31 +40,107 @@
         #pagination {margin:10px auto;text-align: center;}
         #pagination a {display:inline-block;margin-right:10px;}
         #pagination .on {font-weight: bold; cursor: default;color:#777;}
+
+        /* 모달 스타일 */
+        .modal {
+            display: none; /* 모달 숨김 */
+            position: fixed;
+            z-index: 1;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            overflow: auto;
+            background-color: rgba(0, 0, 0, 0.4); /* 배경색, 투명도 */
+        }
+
+        /* 모달 내용 스타일 */
+        .modal-content {
+            background-color: white;
+            margin: 15% auto; /* 모달 위치 조절 */
+            padding: 20px;
+            border: 1px solid #888;
+            width: 80%;
+        }
+
+        /* 모달 닫기 버튼 스타일 */
+        .close {
+            color: #aaa;
+            float: right;
+            font-size: 28px;
+            font-weight: bold;
+        }
+
+        .close:hover,
+        .close:focus {
+            color: black;
+            text-decoration: none;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
-<div class="map_wrap">
-    <div id="map" style="width:100%;height:200%;position:relative;overflow:hidden;"></div>
+<!-- 모달을 열기 위한 버튼 -->
+<button id="open-modal">모달 열기</button>
 
-    <div id="menu_wrap" class="bg_white">
-        <div class="option">
-            <div>
-                <form onsubmit="searchPlaces(); return false;">
-                    키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="키워드를 입력해주세요.">
-                    <button id="search" type="submit">검색하기</button>
-                </form>
+<!-- 모달 요소 -->
+<div id="modal" class="modal">
+    <div class="modal-content">
+        <span class="close">&times;</span>
+
+        <div class="map_wrap">
+            <div id="map" style="width:100%;height:200%;position:relative;overflow:hidden;"></div>
+
+            <div id="menu_wrap" class="bg_white">
+                <div class="option">
+                    <div>
+                        <form onsubmit="searchPlaces(); return false;">
+                            키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="키워드를 입력해주세요.">
+                            <button id="search" type="submit">검색하기</button>
+                        </form>
+                    </div>
+                </div>
+                <hr>
+                <ul id="placesList">
+                    <li style="text-align: center">조회된 장소가 없습니다.</li>
+                </ul>
+                <div id="pagination"></div>
             </div>
         </div>
-        <hr>
-        <ul id="placesList">
-            <li style="text-align: center">조회된 장소가 없습니다.</li>
-        </ul>
-        <div id="pagination"></div>
+
     </div>
 </div>
 
+
+
 <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=4f0dae21f900df3142fba533f31b82b5&libraries=services"></script>
 <script>
+
+    // 모달 열기 버튼과 모달 요소 가져오기
+    const openModalBtn = document.getElementById("open-modal");
+    const modal = document.getElementById("modal");
+
+    // 모달 열기 버튼 클릭 시 이벤트 처리
+    openModalBtn.onclick = function() {
+        modal.style.display = "block"; // 모달 보이기
+    }
+
+    // 모달 닫기 버튼과 모달 내용 가져오기
+    const closeModalBtn = document.querySelector(".close");
+    const modalContent = document.querySelector(".modal-content");
+
+    // 모달 닫기 버튼 클릭 시 이벤트 처리
+    closeModalBtn.onclick = function() {
+        modal.style.display = "none"; // 모달 숨기기
+    }
+
+    // 모달 영역 외 클릭 시 모달 닫기
+    window.onclick = function(event) {
+        if (event.target == modal) {
+            modal.style.display = "none"; // 모달 숨기기
+        }
+    }
+
 
     // 장소 검색 객체를 생성합니다
     var ps = new kakao.maps.services.Places();
