--- a/moinda-api/src/main/resources/templates/index.html
+++ b/moinda-api/src/main/resources/templates/index.html
@@ -6,21 +6,62 @@
 
         <!-- Masthead-->
         <header class="masthead">
-            <div class="container px-4 px-lg-5 h-100">
+            <div class="container px-4 px-lg-5 h-75">
                 <div class="row gx-4 gx-lg-5 h-100 align-items-center justify-content-center text-center">
                     <div class="col-lg-8 align-self-end">
-                        <h1 class="text-white font-weight-bold">Your Favorite Place for Free Bootstrap Themes</h1>
-                        <hr class="divider" />
+                        <th:block th:unless="${session.session == null}">
+                            <h3 class="text-white font-weight-bold">
+                                안녕하세요, [[${session.session.name}]] 님 <br> 모각코 월드입니다
+                            </h3>
+                            <hr class="divider" />
+                        </th:block>
+                        <th:block th:if="${session.session == null}">
+                            <h3 class="text-white font-weight-bold">
+                                안녕하세요, 모각코 월드입니다
+                            </h3>
+                            <hr class="divider" />
+                        </th:block>
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Start Bootstrap can help you build better websites using the Bootstrap framework! Just download a theme and start customizing, no strings attached!</p>
-                        <a class="btn btn-primary btn-xl" href="#about">Find Out More</a>
+                        <a class="btn btn-primary btn-xl" id="meetings" th:href="@{/meetings}">
+                            모각코를 찾아보자
+                        </a>
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <a class="btn btn-primary btn-xl" id="myMeetings" th:href="@{/myMeetings}">
+                            내 모각코를 보자
+                        </a>
+                    </div>
+                    <div class="col-lg-8 align-self-baseline">
+                        <a class="btn btn-primary btn-xl" id="register" th:href="@{/meeting/register}">
+                            모각코를 만들자
+                        </a>
                     </div>
                 </div>
             </div>
         </header>
 
+        <script th:inline="javascript">
+            window.onload = () => {
 
+                const session = [[${session.session}]]
+
+                const registerButton = document.querySelector("#register")
+                const myMeetingsButton = document.querySelector("#myMeetings")
+
+                const checkLogin = (e) => {
+                    if (!session) {
+                        e.preventDefault()
+                        alert("로그인 후 이용해주세요.")
+                        location.href = "/login"
+                    }
+                }
+
+                registerButton.addEventListener("click", checkLogin)
+                myMeetingsButton.addEventListener("click", checkLogin)
+
+            }
+        </script>
     </th:block>
 </th:block>
 </html>
