--- a/moinda-api/src/main/resources/templates/login.html
+++ b/moinda-api/src/main/resources/templates/login.html
@@ -1,81 +1,108 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" lang="ko">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
+<html lang="en"
+      xmlns:th="http://www.thymeleaf.org">
+<th:block th:replace="~{fragment/fragment :: setBody(~{ :: body})}">
+    <th:block th:fragment="body">
 
-<h3> Login </h3>
+        <!-- Masthead-->
+        <header class="masthead">
+            <div class="container px-4 px-lg-5 h-75">
+                <div class="row gx-4 gx-lg-5 h-50 align-items-center justify-content-center">
+                    <div class="col-lg-8 col-xl-6 text-center">
+                        <h3 class="text-white font-weight-bold">Let's Mo Gak Ko!</h3>
+                        <hr class="divider" />
+                    </div>
+                </div>
+                <div class="row gx-4 gx-lg-5 justify-content-center mb-5">
+                    <div class="col-lg-6">
+                        <form id="contactForm" data-sb-form-api-token="API_TOKEN">
+                            <!-- Name input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required" />
+                                <label for="email">Email</label>
+                                <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
+                            </div>
+                            <!-- Email address input-->
+                            <div class="form-floating mb-3">
+                                <input class="form-control" id="password" type="password" placeholder="name@example.com" data-sb-validations="required,email" />
+                                <label for="password">Password</label>
+                                <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
+                                <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
+                            </div>
+                            <div class="d-grid mb-3">
+                                <button class="btn btn-primary btn-xl" id="loginButton" type="button">로그인</button>
+                            </div>
+                            <div class="d-grid mb-3">
+                                <button class="btn btn-primary btn-xl" id="signUpButton" type="button">회원가입</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </header>
 
-<div id="loginForm">
-    <div>
-        이메일 : <input id="email" type="text" name="email">
-    </div>
-    <div>
-        비밀번호 : <input id="password" type="password" name="password">
-    </div>
-    <button type="button" id="loginButton">login</button>
-</div>
+        <script th:inline="javascript">
 
-<script th:inline="javascript">
+            window.onload = () => {
+                var httpRequest;
 
-    window.onload = function () {
-        var httpRequest;
+                const loginButton = document.querySelector("#loginButton")
+                const signUpButton = document.querySelector("#signUpButton")
 
-        const loginButton = document.querySelector("#loginButton")
+                loginButton.addEventListener("click", login)
+                signUpButton.addEventListener("click", () => {
+                    location.href = "/signup"
+                })
 
-        loginButton.addEventListener("click", login)
+                function login() {
+                    const email = document.querySelector("#email")
+                    const password = document.querySelector("#password")
 
-        function login() {
-            const email = document.querySelector("#email")
-            const password = document.querySelector("#password")
+                    const loginInputs = {
+                        "email" : email.value,
+                        "password" : password.value,
+                    }
 
-            const loginInputs = {
-                "email" : email.value,
-                "password" : password.value,
-            }
+                    callRestApi(loginEvent, "POST", "/api/member/login", loginInputs);
+                }
 
-            callRestApi(loginEvent, "POST", "/api/member/login", loginInputs);
-        }
+                function getHttpInstance() {
+                    if(!httpRequest) {
+                        httpRequest = new XMLHttpRequest();
+                    }
 
-        function getHttpInstance() {
-            if(!httpRequest) {
-                httpRequest = new XMLHttpRequest();
-            }
+                    return httpRequest;
+                }
 
-            return httpRequest;
-        }
+                function callRestApi(e, type, url, data) {
+                    const jsonParsedData = data ? JSON.stringify(data) : null;
 
-        function callRestApi(e, type, url, data) {
-            const jsonParsedData = data ? JSON.stringify(data) : null;
+                    httpRequest = getHttpInstance();
 
-            httpRequest = getHttpInstance();
+                    httpRequest.onreadystatechange = e;
+                    httpRequest.open(type, url);
+                    httpRequest.setRequestHeader("Content-Type", "application/json")
+                    httpRequest.send(jsonParsedData);
+                }
 
-            httpRequest.onreadystatechange = e;
-            httpRequest.open(type, url);
-            httpRequest.setRequestHeader("Content-Type", "application/json")
-            httpRequest.send(jsonParsedData);
-        }
-
-        function loginEvent() {
-            try {
-                if (httpRequest.readyState === XMLHttpRequest.DONE) {
-                    if (httpRequest.status === 200) {
-                        window.location.href = "/"
-                    } else {
-                        alert(httpRequest.responseText);
-                        return;
+                function loginEvent() {
+                    try {
+                        if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                            if (httpRequest.status === 200) {
+                                window.location.href = "/"
+                            } else {
+                                alert(httpRequest.responseText);
+                                return;
+                            }
+                        }
+                    }
+                    catch( e ) {
+                        alert('Caught Exception: ' + e.description);
                     }
                 }
             }
-            catch( e ) {
-                alert('Caught Exception: ' + e.description);
-            }
-        }
-    }
 
-</script>
-
-</body>
+        </script>
+    </th:block>
+</th:block>
 </html>
